--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -42,6 +42,7 @@
         <p style="margin: -25px 40px;">close</p>
       </div>
 
+      <!--информация о выбранном файле-->
       <div id="file_info_block" style="display: none">
         <div class="file_ico_name_div">
           <img id="file_icon" class="icon" style="margin: 10px 10px" width="40" height="40" src="static/img/files/file.svg">
@@ -69,6 +70,7 @@
         </div>
       </div>
 
+      <!--информация о выбранных файлах и каталогах-->
       <div id="file_list_block" style="display: none">
         <div id="file_select_all_button" class="file_select_all_button block_select" onclick="all_files_checkBox()">
           <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/select all.svg">
@@ -95,6 +97,11 @@
           <p style="margin: -25px 40px;">delete</p>
         </div>
 
+      </div>
+
+      <!--индикация состояния загрузки файла-->
+      <div id="file_upload_block" style="display: none">
+        
       </div>
 
     </div>
