--- a/app/static/css/rightBar.1.css
+++ b/app/static/css/rightBar.1.css
@@ -122,7 +122,7 @@
   width: 140px;
   height: 35px;
   border-bottom: 1px solid var(--main-border-color);
-  border-right: 1px solid var(--main-border-color);
+  border-left: 1px solid var(--main-border-color);
   background-color: var(--bg-color);
 
   cursor: pointer;
