сокращение размера пути

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -51,19 +51,19 @@
       <!--информация о выбранном файле-->
       <div id="file_info_block" style="display: none">
         <!--редактирование-->
-        <div id="file_activity_button" class="file_activity_button block_select" style="width: 80px; display: none" onclick="all_files_checkBox()">
+        <div id="file_activity_edit_button" class="file_activity_button block_select" style="width: 80px; display: none" onclick="()">
           <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/activity/edit.svg">
           <p style="margin: -25px 40px;">edit</p>
         </div>
 
         <!--распаковка-->
-        <div id="file_activity_button" class="file_activity_button block_select" style="width: 100px; display: none" onclick="all_files_checkBox()">
+        <div id="file_activity_unpack_button" class="file_activity_button block_select" style="width: 100px; display: none" onclick="()">
           <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/activity/unzip.svg">
           <p style="margin: -25px 40px;">unpack</p>
         </div>
 
         <!--просмотр-->
-        <div id="file_activity_button" class="file_activity_button block_select" style="width: 80px; display: none" onclick="all_files_checkBox()">
+        <div id="file_activity_view_button" class="file_activity_button block_select" style="width: 80px; display: none" onclick="()">
           <img class="icon" style="margin: 7px 10px;" width="20" height="20" src="static/img/activity/see.svg">
           <p style="margin: -25px 40px;">view</p>
         </div>
